[package]
name = "axeman_rs"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = 'abort'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0.10" }
log = { version = "0.4" }
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11.17", features = ["blocking", "json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
base64 = { version = "0.21" }
base64-serde = { version = "0.7" }
bytes = { version = "1.4" }
time = { version = "0.3.21" }
openssl = { version = "0.10" }
anyhow = "1.0"
crossbeam-channel = { version = "0.5" }